tests/api/reference/negative/03-missing-field.asm
packed struct Pair {
    low: u8
    high: u8
}

const pair: Pair = Pair {
    low: 1
}
